# SuryaDB

./: README.md
suryadb/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
suryadb/docs/: Makefile  conf.py  example.ipynb  make.bat
suryadb/src/suryadb/: __init__.py
suryadb/tests/: test_suryadb.py
