[tool.poetry]
name = "suryadb"
version = "0.1.0"
description = "Fast and efficient vector database"
authors = ["Karan Jakhar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
